--- a/config/cable.yml
+++ b/config/cable.yml
@@ -6,5 +6,8 @@ test:
 
 production:
   adapter: redis
-  url: <%= ENV.fetch("REDISCLOUD_URL") %>
+  # Heroku
+  # url: <%= ENV.fetch("REDISCLOUD_URL") %>
+  # Digital Ocean
+  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
   channel_prefix: myPortfolio_production
