--- a/config/cable.yml
+++ b/config/cable.yml
@@ -6,10 +6,5 @@ test:
 
 production:
   adapter: redis
-  # Heroku
-  # url: <%= ENV.fetch("REDISCLOUD_URL") %>
-
-  # Digital Ocean
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
-
+  url: <%= ENV.fetch("REDISCLOUD_URL") %>
   channel_prefix: myPortfolio_production
